# speak

./: .gitignore  AGENTS.md  ARCHITECTURE.md  HowToTest.txt  README.md  design-specs.md  docker-compose.yml  main.py  pyproject.toml  requirements.md
.agents/skills/exam-system-skill/: SKILL.md
.agents/skills/fastapi-skill/: SKILL.md
.agents/skills/llm-task-skill/: SKILL.md
.agents/skills/transcription-skill/: SKILL.md
.agents/skills/video-processing-skill/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  ci.yml
backend/: .env.example  .envrc  BACKEND.md  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  001_initial_migration.py  002_add_error_message.py  003_add_video_metadata.py  004_remove_courses.py  005_create_speaking_practice_records.py  006_add_notes_zh.py  007_add_vocabulary_sm2_fields.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  chat.py  courses.py  llm.py  migrate.py  speaking.py  stats.py  videos.py  vocabulary.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  chunk.py  course.py  progress.py  speaking.py  study_plan.py  transcript.py  video.py  vocabulary.py
backend/app/repositories/: __init__.py  base.py  chunk.py  course.py  progress.py  study_plan.py  transcript.py  video.py  vocabulary.py
backend/app/schemas/: __init__.py  auth.py  chat.py  course.py  exam.py  progress.py  stats.py  study_plan.py  transcript.py  user.py  video.py  vocabulary.py
backend/app/services/: __init__.py  auth_service.py  chat_service.py  chunking_service.py  download_service.py  exceptions.py  llm_service.py  speaking_service.py  stats_service.py  transcription_service.py  video_service.py
backend/app/utils/: gpu_utils.py
backend/scripts/: init_db.py
backend/tests/unit/: test_chunking_service.py  test_config.py  test_download_service.py  test_exceptions.py  test_logging.py  test_speaking_service.py  test_transcription_service.py  test_video_service.py
docs/superpowers/plans/: 2025-04-24-sqlite3-migration.md  2025-04-24-study-statistics-implementation.md  2026-04-26-phase2-video-pipeline.md
docs/superpowers/specs/: 2025-04-24-study-statistics-design.md
frontend/: .env.example  Dockerfile  FRONTEND.md  README.md  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/common/: BaseButton.vue  BaseInput.vue  LocaleText.vue  index.ts
frontend/src/components/exam/: index.ts
frontend/src/components/layout/: AppHeader.vue
frontend/src/components/learning/: ShadowingMode.vue  StudyPlanDisplay.vue  VocabularyCard.vue  index.ts
frontend/src/components/speaking/: index.ts
frontend/src/composables/: useAuth.ts  useI18n.ts
frontend/src/router/: index.ts  routes.ts
frontend/src/services/: api.ts  auth.service.ts  course.service.ts  index.ts  speaking.service.ts  stats.service.ts  video.service.ts
frontend/src/stores/: auth.store.ts  index.ts  language.store.ts  stats.store.ts  video.store.ts
frontend/src/types/: index.ts
frontend/src/views/: CourseDetailView.vue  CourseListView.vue  DashboardView.vue  ExamView.vue  LoginView.vue  SettingsView.vue  SpeakingPracticeView.vue  VideoPlayerView.vue
present/: English_Learning.pptx  present_zh.md  presentation.pptx  presentation_outline.md
tests/unit/: __init__.py  conftest.py
(+2 files in other folders)
