[project]
name = "english-learning-backend"
version = "0.1.0"
description = "AI-powered English education platform backend"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "English Learning Team"}
]
keywords = ["fastapi", "llm", "education", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
]

dependencies = [
    # FastAPI and web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    # Database - SQLite with async support
    "sqlalchemy[asyncio]>=2.0.25",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    # LLM - llama-cpp-python with GPU support
    # NVIDIA (CUDA): uv pip install llama-cpp-python --extra-index-url https://abetlen.github.io/llama-cpp-python/whl/cu125
    "llama-cpp-python>=0.3.23",
    # GPU detection - NVIDIA and AMD support
    "gputil>=1.4.0",
    "pyamdgpuinfo>=2.1.6; sys_platform == 'linux'",
    # Video processing
    "ffmpeg-python>=0.2.0",
    "yt-dlp>=2024.1.0",
    # Transcription
    "faster-whisper>=0.10.0",
    "ctranslate2>=4.0.0",
    "pyannote.audio>=3.1.0",
    "pysubs2>=1.6.0",
    # HTTP client
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/yourorg/english-learning-app"
Repository = "https://github.com/yourorg/english-learning-app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.uv.pip]
# Extra index URLs for GPU-accelerated packages
extra-index-url = [
    # NVIDIA GPU support (CUDA 12.5)
    "https://abetlen.github.io/llama-cpp-python/whl/cu125",
    # AMD GPU support
    # "https://abetlen.github.io/llama-cpp-python/whl/rocm62",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # Pyflakes
    "I", # isort
    "N", # pep8-naming
    "W", # pycodestyle warnings
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM",# flake8-simplify
]
ignore = [
    "E501", # Line too long (handled by formatter)
    "B008", # FastAPI dependency injection pattern triggers this
    "UP046", # Using Generic[T] instead of type params - design choice
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
